LUGG 914 - Fixed secondary nav link wrapping, cleaned up text-align (#38)

--- a/css/suitcase_responsive.css
+++ b/css/suitcase_responsive.css
@@ -172,7 +172,6 @@
         height: 1em;
     }
 
-    .region-secondary-menu { text-align: left; }
 }
 
 @media print {
